can now render movie card times

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   </div>
 
   <!--  showings -->
-  <div class="ui cards showings">
+  <div id = "ui-cards-showings" class="ui cards showings">
   </div>
 </body>
+<script src="src/adapter.js"></script>
 <script src="src/index.js"></script>
 </html>
