added event listeners to buy tickets

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class='item'>
       <h2 class="ui header">
         <i class="ticket icon"></i>
-        <div class="content">
+        <div id = "content" class="content">
           tick.it
         </div>
         <div class="sub header">
